--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,30 @@ group: navigation
 permalink: /contact/
 ---
 
+<div class="row">
+<div class="col-md-12">
+<p>
+از طریق فرم زیر و یا با ارسال ایمیل به 
+<a href="mailto:help@amary.ir">
+help@amary.ir
+</a>
+میتوانید با تماس بگیرید و از خدمات مشاوره ای استفاده کنید.
+
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-6 column">
 			<form role="form" action="http://formspree.io/help@amary.ir">
 				<div class="form-group">
-					 <label for="name">نام</label><input type="email" class="form-control" id="name" />
+					 <label for="name">نام</label>
+					 <div class="col-lg-5">
+						<input type="email" class="form-control" id="name" />
+					 </div>
 				</div>
 				<div class="form-group">
-					 <label for="email">ایمیل</label><input type="email" class="form-control" id="email" />
+					 <label for="email">ایمیل</label>
+					 <div class="col-lg-5">
+						<input type="email" class="form-control" id="email" />
+					 </div>
 				</div>
 				<div class="form-group">
       <label for="textArea" class="col-lg-2 control-label">متن پیام</label>
@@ -23,7 +38,7 @@ permalink: /contact/
 				<div class="form-group">
 					 <label for="file">فایل پیوستی</label><input type="file" id="file" />
 					<p class="help-block">
-						میتوانید فایل دادههای خود را از طریق این فرم ارسال کنید.
+						میتوانید فایل داده‌های خود را از طریق این فرم ارسال کنید.
 					</p>
 				</div>
 				<button type="submit" class="btn btn-default">ارسال</button>
