contact page update

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@ group: navigation
 permalink: /contact/
 ---
 
+<div class="container">
 <div class="row">
 <div class="col-md-12">
 <p>
@@ -13,8 +14,10 @@ permalink: /contact/
 help@amary.ir
 </a>
 میتوانید با تماس بگیرید و از خدمات مشاوره ای استفاده کنید.
+</p>
+</div>
+</div>
 
-<div class="container">
 	<div class="row clearfix">
 		<div class="col-md-6 column">
 			<form role="form" action="http://formspree.io/help@amary.ir">
