--- a/contact.html
+++ b/contact.html
@@ -18,34 +18,56 @@ help@amary.ir
 </div>
 </div>
 
-	<div class="row clearfix">
-		<div class="col-md-6 column">
-			<form role="form" action="http://formspree.io/help@amary.ir">
-				<div class="form-group">
-					 <label for="name">نام</label>
-					 <div class="col-lg-5">
-						<input type="email" class="form-control" id="name" />
-					 </div>
-				</div>
-				<div class="form-group">
-					 <label for="email">ایمیل</label>
-					 <div class="col-lg-5">
-						<input type="email" class="form-control" id="email" />
-					 </div>
-				</div>
-				<div class="form-group">
-      <label for="textArea" class="col-lg-2 control-label">متن پیام</label>
-      <div class="col-lg-10">
-        <textarea class="form-control" rows="3" id="textArea"></textarea>
-      </div>
-				<div class="form-group">
-					 <label for="file">فایل پیوستی</label><input type="file" id="file" />
-					<p class="help-block">
-						میتوانید فایل داده‌های خود را از طریق این فرم ارسال کنید.
-					</p>
-				</div>
-				<button type="submit" class="btn btn-default">ارسال</button>
-			</form>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well well-sm">
+                <form class="form-horizontal" method="post" action="http://formspree.io/help@amary.ir">
+                    <fieldset>
+                        <legend class="text-center header">فرم تماس</legend>
+
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                            <div class="col-md-4">
+                                <input id="lname" name="name" type="text" placeholder="نام" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                            <div class="col-md-4">
+                                <input id="email" name="email" type="text" placeholder="ایمیل" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
+                            <div class="col-md-4">
+                                <input id="phone" name="phone" type="text" placeholder="تلفن" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
+                            <div class="col-md-8">
+                                <textarea class="form-control" id="message" name="message" placeholder="متن پیام" rows="7"></textarea>
+                            </div>
+                        </div>
+						
+						<div class="form-group">
+                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-file-square bigicon"></i></span>
+                            <div class="col-md-8">
+                                <input id="file" name="file" type="file" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn btn-primary btn-lg">ارسال</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
