--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ help@amary.ir
                         <legend class="text-center header">فرم تماس</legend>
 						
 						<input type="hidden" name="_subject" value="درخواست مشاوره آماری" />
-						<input type="hidden" name="_next" value="../thanks/" />
+						<input type="hidden" name="_next" value="//amary.ir/thanks/" />
 
                         <div class="form-group">
                             
