--- a/404.html
+++ b/404.html
@@ -1,1 +1,9 @@
-Sorry this page does not exist =(
+---
+layout: default
+page-class: page-404
+title: Oops! That page can’t be found.
+sitemap:
+  exclude: 'yes'
+---
+صفحه مورد نظر یافت نشد
+
