--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: default
 title: مشاوره آماری
 description: مشاوره آماری پایان نامه، طراحی و تحلیل پرسنامه، تحلیل داده با نرم افزارهای آماری، انجام پروژه‌های آماری
 ---
