remove phone temporary

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ permalink: /contact/
 <a href="mailto:help@amary.ir">
 help@amary.ir
 </a>
-، تماس با تلفن ۰۳۵۳۸۲۵۱۰۵۷ و یا از طریق فرم  زیر با ما در در میان بگذارید.
+و یا از طریق فرم  زیر با ما در در میان بگذارید.
 </p>
 </div>
 </div>
