--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ help@amary.ir
     <div class="row">
         <div class="col-md-8">
             <div class="well well-sm">
-                <form class="form-horizontal" method="post" action="http://formspree.io/help@amary.ir">
+                <form class="form-horizontal" method="POST" action="http://formspree.io/help@amary.ir">
                     <fieldset>
                         <legend class="text-center header">فرم تماس</legend>
 						
